<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC">

    <ProgressBar
        android:id="@+id/pBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="147dp"
        android:layout_height="112dp"
        android:progressTint="#5E5A5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/Pinfo"
        android:layout_width="319dp"
        android:layout_height="85dp"
        android:accessibilityLiveRegion="assertive"
        style="@style/AppTheme"
        android:text="@string/progress_info"
        android:textColor="#474646"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pBar"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/computation"
        style="@style/AppTheme"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:text="@string/computation"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/pBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/blend2"
        app:layout_constraintBottom_toTopOf="@+id/computation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785"
        app:srcCompat="@drawable/blend2" />

</androidx.constraintlayout.widget.ConstraintLayout>